[gd_scene load_steps=5 format=3 uid="uid://c7fxbxwkox55h"]

[ext_resource type="PackedScene" uid="uid://cyf1o7jdqeggd" path="res://scene/entity/Components/health_component.tscn" id="1_87p28"]
[ext_resource type="Script" path="res://scene/entity/ennemy/mother_ship.gd" id="1_fg2wi"]
[ext_resource type="PackedScene" uid="uid://dqseegllsngkg" path="res://scene/entity/Components/hitbox_component.tscn" id="2_13tvd"]
[ext_resource type="PackedScene" uid="uid://b4530u4x8obbs" path="res://scene/entity/Components/velocity_and_direction.tscn" id="3_ab1pa"]

[node name="MotherShip" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_fg2wi")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.34902, 0.0196078, 0.160784, 1)
polygon = PackedVector2Array(-138, -2, -2, -124, 52, 0, 1, 144)

[node name="VelocityAndDirection" parent="." instance=ExtResource("3_ab1pa")]
speed = 30.0

[node name="HealthComponent" parent="." instance=ExtResource("1_87p28")]
MAX_HEALTH = 150

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_componant") instance=ExtResource("2_13tvd")]
collision_layer = 32
collision_mask = 64
health_componant = NodePath("../HealthComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitboxComponent"]
polygon = PackedVector2Array(-2, -124, -138, -2, 1, 144, 52, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-2, -124, -138, -2, 1, 144, 52, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.275
autostart = true

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(55, -84)

[connection signal="death" from="HealthComponent" to="." method="_on_health_component_death"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
